--- a/options_pages/readonly_rules.css
+++ b/options_pages/readonly_rules.css
@@ -1,73 +1,73 @@
 #addRule {
-    float: right;
-    border-bottom-width: 0 !important;
-    width: 130px;
-    height: 25px;
-    margin-top: -37px;
+  float: right;
+  border-bottom-width: 0 !important;
+  width: 130px;
+  height: 25px;
+  margin-top: -37px;
 }
 
 .active {
-    background-color: #FFF;
+  background-color: #fff;
 }
 
 .new_rule_operations {
-    position: fixed;
-    display: none;
-    width: 40px;
-    height: 30px;
-    padding-top: 10px;
+  position: fixed;
+  display: none;
+  width: 40px;
+  height: 30px;
+  padding-top: 10px;
 }
 
 .new_rule_operations img {
-    cursor: pointer;
-    width: 10px;
+  cursor: pointer;
+  width: 10px;
 }
 
 .operations {
-    position: fixed;
-    display: none;
-    width: 20px;
-    height: 30px;
-    padding-top: 5px;
+  position: fixed;
+  display: none;
+  width: 20px;
+  height: 30px;
+  padding-top: 5px;
 }
 
 .operations img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .domain_field {
-    padding-left: 30px !important;
-    width: 25%;
+  padding-left: 30px !important;
+  width: 25%;
 }
 
 .name_field {
-    width: 25%;
+  width: 25%;
 }
 
 .value_field {
-    width: 40%;
+  width: 40%;
 }
 
 .popup {
-    position: fixed;
-    display: none;
-    top: 35%;
-    left: 35%;
-    height: 21%;
-    width: 30%;
+  position: fixed;
+  display: none;
+  top: 35%;
+  left: 35%;
+  height: 21%;
+  width: 30%;
 }
 
 #submitDiv {
-    float: right;
-    margin-right: 5px;
-    margin-top: 5px;
+  float: right;
+  margin-right: 5px;
+  margin-top: 5px;
 }
 
 #submitButton {
-    right: 0;
-    height: 30px;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+  right: 0;
+  height: 30px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
